<resources>
    <string name="app_name">Chat - Kotlin</string>
    <string name="default_web_client_id">631533183730-p2kbq09tj83rnq814nt1urfqijth7i38.apps.googleusercontent.com</string>

    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_chat">Chats</string>

    <string name="tv_Titulo">Titulo</string>

    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="txt_login">Login</string>
    <string name="et_email">Correo Electronico</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una Cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>
    <string name="tv_recuperar_cuenta">Olvidé la contraseña <b> Recuperar </b></string>

    <string name="txt_registro">Registro</string>
    <string name="et_nombres">Nombres</string>
    <string name="et_R_password">Repita la contraseña</string>
    <string name="btn_registrar">Registrar</string>

    <string name="btn_ActualizarInfo">Actualizar</string>
    <string name="btn_CambiarPass">Cambiar contraseña</string>
    <string name="btn_Cerrarsesion">Cerrar Sesion</string>

    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> -- </string>

    <string name="Txt_titulo_edit">Editar informacion</string>
    <string name="btn_Actualizar">Actualizar</string>

    <string name="Txt_olvide_pass">Olvidé password</string>
    <string name="Txt_ingrese_email">Ingrese su email para el envio de las instrucciones de recuperacion</string>
    <string name="btr_Enviar">Enviar</string>

    <string name="Txt_cambiar_pass">Cambiar contraseña</string>

    <string name="et_pass_actual">Contraseña actual</string>
    <string name="et_pass_nueva">Nueva Contraseña</string>
    <string name="et_r_pass_nueva">Repetir Nueva Contraseña</string>
    <string name="btn_CambiarPassword">Cambiar</string>

    <string name="item_uid">uid del usuario</string>
    <string name="item_nombre">nombre del usuario</string>
    <string name="item_email">email del usuario</string>

    <string name="et_buscar_usuario">Buscar usuario</string>

    <string name="txt_nombre_usuario">Nombres</string>
    <string name="txt_estado_chat">Online</string>
    <string name="Et_mensaje_chat">Escriba algo</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mmm</string>

    <string name="et_buscar">Buscar</string>
    <string name="tvFecha">dd/MM/yyyy</string>

    <string name="BtnCerrarVisualizador">Cerrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>